fixed leetocde page duoshuo-block overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,7 @@ body {
   padding-top: 70px;
   color: #111;
    /*Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 /*<<<<<< nav bar ***********************/
 #topbar{
@@ -169,6 +169,9 @@ div.paginator-wrap{
 /*<<<<<<<<< related post style *********/
 
 div.related-wrap{
+  padding-top: 40px;
+}
+div.related-body{
   background-color: #eee;
   border-left: 3px #222 solid;
   padding-left: 2em;
@@ -178,7 +181,7 @@ div.related-wrap{
   //-webkit-transition: -webkit-transform 2s; /* For Safari 3.1 to 6.0 */
   //transition: transform 2s;
 }
-div.related-wrap:hover{
+div.related-body:hover{
   border-left: 6px #ff5050 solid;
   margin-left: -20px;
   border-radius: 30px 5px 5px 0px;
@@ -190,6 +193,7 @@ div.related-wrap:hover{
 /*<<<<<<<<<<<< comment style *************/
 div.comments-wrap{
   padding-top: 50px;
+  //padding-bottom: 70px;
 }
 
 /************* comment style >>>>>>>>>>>>*/
@@ -219,8 +223,8 @@ span.span-link a{
   color: #fff;
   border-radius: .25em;
   background-color: #777;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding-left: 2px;
+  padding-right: 2px;
   margin-top: 2px;
   margin-bottom: 2px;
 
